--- a/mod/recordings/bigbluebutton.yml
+++ b/mod/recordings/bigbluebutton.yml
@@ -1,10 +1,10 @@
 bbb_version: '2.1.0'
 raw_audio_src: /var/freeswitch/meetings
-raw_video_src: /usr/share/red5/webapps/video/streams
+# raw_video_src: /usr/share/red5/webapps/video/streams
 kurento_video_src: /var/kurento/recordings
 kurento_screenshare_src: /var/kurento/screenshare
-raw_screenshare_src: /usr/share/red5/webapps/screenshare/streams
-raw_webrtc_deskshare_src: /usr/share/red5/webapps/video-broadcast/streams
+# raw_screenshare_src: /usr/share/red5/webapps/screenshare/streams
+# raw_webrtc_deskshare_src: /usr/share/red5/webapps/video-broadcast/streams
 raw_deskshare_src: /var/bigbluebutton/deskshare
 raw_presentation_src: /var/bigbluebutton
 notes_endpoint: http://etherpad:9001/p
